--- a/views/register.ejs
+++ b/views/register.ejs
@@ -46,14 +46,14 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_2013_Google.png" alt="Google">
         Continue with Google
       </a>
-      <a href="/auth/facebook" class="social-btn">
+      <!-- <a href="/auth/facebook" class="social-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/1024px-2021_Facebook_icon.svg.png" alt="Facebook">
         Continue with Facebook
       </a>
       <a href="/auth/twitter" class="social-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/512px-Logo_of_Twitter.svg.png" alt="Twitter">
         Continue with Twitter
-      </a>
+      </a> -->
     </div>
 
     <!-- Footer -->
