--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="/css/profile.css" />
   <% } %>
 
-  <% if (title === 'Home') { %>
+  <!-- <% if (title === 'Home') { %>
     <link rel="stylesheet" href="/css/home.css" />
-  <% } %>
+  <% } %> -->
 
   <% if (title && title.includes('Dashboard')) { %>
     <link rel="stylesheet" href="/css/dashboard.css" />
